2008-02-19  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdReadmeRemoveFileSection): Remove
	awk edit. Moved to perl library.
	(CygbuildBootVariablesGlobalMain): Add --binary to CYGBUILD_PATCH_OPT.
	(CygbuildPatchApplyMaybe): Fix problem with `unpatch' where not
	all files ere patched.
	(CygbuildBootVariablesGlobalMain): Remove `cygbuild_opt_exclude_cygbuild'.

	* bin/cygbuild.pl (ReadmeFix): Add Copyright year update.
	Remove 'files included...' section.

2008-02-18  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::Packaging commands): Remove functionality
	no longer presend in command `readmefix.

	* etc/template/package.README (Language): Typo in word
	'Licenced ...'. Corrected to Licensed.

	* etc/template/build.env.options.tmp: Remove obsolte file.

	* bin/cygbuild.sh:
	(CygbuildDefineGlobalMain): Remove obsolete EXTRA_BUILD_ENV_OPTIONS.
	(CygbuildCmdBuildStdMakefile): Do not use EXTRA_BUILD_ENV_OPTIONS.
	(CygbuildCmdPkgSourceStandard): Tighten regexp to *not*
	include binary package in src package.
	(CygbuildCmdBuildStdMakefile): Display Gcc version information.
	(CygbuildCmdInstallCheckManualPages): Verify integrity of
	compressed files.
	(CygbuildCmdReadmeRemoveFileSection): New
	(CygbuildCmdReadmeFixFile): Call `CygbuildCmdReadmeRemoveFileSection'
	(CygbuildFileCmpReplaceIfDiffer): New.

2008-02-17  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/patch-after.sh.tmp: New.

	* etc/template/patch-before.sh.tmp: New.

	* bin/cygbuild.pl: (HELP::Other commands): Change
	getsrc command to cygsrc.

	* bin/cygbuild.sh (CygbuildBootVariablesId): Remove unused
	CVS based variables.
	(CygbuildCommandMain): Change getsrc command to cygsrc.
	(CygbuildFileConvertCRLF): New
	(CygbuildFileConvertLF): New.
	(CygbuildFileIsCRLF): New.
	(CygbuildDefineGlobalMain): Define SCRIPT_PATCH_BEFORE,
	SCRIPT_PATCH_AFTER
	(CygbuildBootFunctionExport): Export new functions.

2008-02-16  Jari Aalto  <jari.aalto@cante.net>
